Delete files, that isn't used